// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The FullHeightCard is rendered including some props 1`] = `
<div
  className="CourseCard_Empty eleJBw hTJkL"
  id="Test01"
>
  <div
    className="JDYuN"
  />
</div>
`;

exports[`The FullHeightCard is rendered including the CardBanner and CardDetails components 1`] = `
<div
  className="CourseCard eleJBw hTJkL"
  id="Test02"
>
  <a
    className="jHIrrG"
    href="https://yoast.com/academy/keyword-research-training/"
    rel={null}
    target="_blank"
  >
    <img
      alt=""
      className="iUKEHi"
      src="../wp-content/plugins/wordpress-seo/images/sample_course_card_header.png"
    />
    <h2
      className="feycKL"
    >
      Keyword Research
    </h2>
    <span
      className="fcHEfD"
    >
      (Opens in a new browser tab)
    </span>
  </a>
  <span
    className="iflUQY"
  >
    Free
  </span>
  <span
    className="ejaAMP"
  />
  <div
    className="JDYuN"
  >
    <div
      className="fGxWFj"
    >
      <div
        className="jrJpoM"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Do you know the essential first step of good SEO? It’s keyword research. In this training, 
you’ll learn how to research and select the keywords that will guide searchers to your pages.",
          }
        }
      />
    </div>
    <div
      className="drYPvB"
    >
      <a
        className="ffhiWj"
        href="https://yoast.com/cart/?add-to-cart=1311259"
        rel={null}
        target="_blank"
      >
        Start your free trail
        <span
          className="fcHEfD"
        >
          (Opens in a new browser tab)
        </span>
      </a>
      <a
        className="bcLHpn"
        href="https://yoast.com/academy/keyword-research-training/"
        rel={null}
        target="_blank"
      >
        Read more about this training »
        <span
          className="fcHEfD"
        >
          (Opens in a new browser tab)
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`The empty Card component matches the snapshot 1`] = `
<div
  className="hTJkL"
  id=""
>
  <div
    className="JDYuN"
  />
</div>
`;
